remove scroll overflow on mobile devices, fix navbar menu collapsing height

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -263,14 +263,14 @@ header{
   position: fixed;
   top: 0;
   right: 0;
-  /* width: 300px; */
   width: 100%;
-  height: 695px;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
   transition: zoomOut;
+  overflow: hidden;
 }
 
 .video-container {
@@ -2542,6 +2542,10 @@ textarea {
 }
 
 @media (max-width: 480px) {
+
+  body{
+    overflow-y: hidden;
+  }
 
   .skills-title-bg{
     background-color: #1c323b;
